feat: added track3d api
