# app/Http/Controllers/V1/CalculateTrackTechDataController.php
@@ -89,4 +89,81 @@ class CalculateTrackTechDataController extends Controller
 
         return response()->json($geojson);
     }
+
+    /**
+     * @OA\Post(
+     *     path="/api/v1/track3d",
+     *     summary="Get 3D data for a track",
+     *     tags={"3D Data"},
+     *     @OA\RequestBody(
+     *         description="GeoJSON object that needs to be added to the database",
+     *         required=true,
+     *         @OA\JsonContent(
+     *             example={
+     *                 "type": "Feature",
+     *                 "properties": {
+     *                     "id": 27060,
+     *                     "created_at": "2022-09-07T07:47:11.000000Z",
+     *                     "updated_at": "2024-01-07T22:59:43.000000Z",
+     *                     "name": {
+     *                         "it": "119 - Asciano - Scarpa d'Orlando",
+     *                         "en": "119 - Asciano - Scarpa d'Orlando"
+     *                     }
+     *                 },
+     *                 "geometry": {
+     *                     "type": "LineString",
+     *                     "coordinates": {
+     *                         {10.4685531,43.7494983},
+     *                         {10.4686648,43.7494112}
+     *                     }
+     *                 }
+     *             }
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             example={
+     *                 "type": "Feature",
+     *                 "properties": {
+     *                     "id": 27060,
+     *                     "created_at": "2022-09-07T07:47:11.000000Z",
+     *                     "updated_at": "2024-01-07T22:59:43.000000Z",
+     *                     "name": {
+     *                         "it": "119 - Asciano - Scarpa d'Orlando",
+     *                         "en": "119 - Asciano - Scarpa d'Orlando"
+     *                     }
+     *                 },
+     *                 "geometry": {
+     *                     "type": "LineString",
+     *                     "coordinates": {
+     *                         {10.4685531,43.7494983},
+     *                         {10.4686648,43.7494112}
+     *                     }
+     *                 }
+     *             }
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Invalid input",
+     *     )
+     * )
+     */
+    public function get3DData(Request $request)
+    {
+        $feature = $request->input();
+
+        $original_track_points = DB::select("SELECT (dp).path[1] AS index, (dp).geom AS geom FROM (SELECT (ST_DumpPoints(ST_GeomFromGeoJSON('" . json_encode($feature['geometry']) . "'))) as dp) as Foo");
+
+        $geojson_coordinates = $this->calcOriginalTrackElevations($original_track_points);
+
+        $geojson['geometry'] = [
+            'type' => 'LineString',
+            'coordinates' => $geojson_coordinates
+        ];
+
+        return response()->json($geojson);
+    }
 }
